# simple-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
assets/: CMakeLists.txt
cmake/: CMakeLists.txt
lib/: CMakeLists.txt
lib/httpserver/: CMakeLists.txt
lib/httpserver/include/: file.h  helpers.h  httpserver.h
lib/httpserver/src/: httpserver.cpp
lib/httpserver/template/: error-404.html  index.html
src/: CMakeLists.txt  aboutdialog.ui  cli.cpp  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h
